--- a/PhamVanHanh.tex
+++ b/PhamVanHanh.tex
@@ -77,80 +77,85 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\huge Nguyen Thanh Trung} & Email: \href{mailto:ngthanhtrung23@gmail.com}{ngthanhtrung23@gmail.com}\\
-  & Mobile: +65 9850 0401
+  \textbf{\huge Pham Van Hanh} & Email: \href{mailto:vanhanh.pham@gmail.com}{vanhanh.pham@gmail.com}\\
+  & Mobile: +84 70 50 60 162
 \end{tabular*}
+
+
+%----------SUMMARY-----------------
+\section{Summary}
+  \resumeSubHeadingListStart
+    \resumeItemListStart
+      \resumeItem{Software Engineer Intern at Facebook in 2017 \& 2018}
+      \resumeItem{IOI 2015 gold medalist, ACM/ICPC World Finals 2016 \& 2017}
+      \resumeItem{Experience with C++, Java, JavaScript, PHP, OCaml, HTML, Hack \& React}
+    \resumeItemListEnd
+  \resumeSubHeadingListEnd
 
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubhead
-      {Google}{Sep. 2016 -- Present}
-      {Software Engineer}
+      {Facebook}{Jun. 2018 -- Sep. 2018}
+      {Software Engineer Intern}
       \resumeItemListStart
-        \resumeItem{Working on Tez -- mobile payment application targeted at Indian users.}
-        \resumeItem{Developing administration dashboards which combine and translate data from various backends into meaningful data points for Tez customer support, risk and compliance operators.}
-        \resumeItem{Developing streaming batch jobs for processing over 3,000 log events per second and collect relevant data into Bigtable.}
-        \resumeItem{Problem setting and co-ordinating problem setters' discussion for \link{https://code.google.com/codejam/kickstart/}{Google Codejam Kickstart}.}
-        \resumeItem{Language/Technology: \textbf{Java}, \textbf{Go}, \textbf{protobuf}, \textbf{Spanner}, \textbf{Bigtable}, \textbf{Flume}.}
+        \resumeItem{Implemented a source-to-source compiler to convert JavaScript code of new versions to older versions.}
+        \resumeItem{Language/Technology: \textbf{Abstract syntax tree}, \textbf{JavaScript} \&` \textbf{OCaml}.}
       \resumeItemListEnd
 
     \resumeSubhead
-      {Garena}{Nov. 2015 -- Sep. 2016}
-      {Software Engineer}
+      {Facebook}{Jun. 2017 -- Sep. 2017}
+      {Software Engineer Intern}
       \resumeItemListStart
-        \resumeItem{Implemented payment and logistic system for Shopee ‐- mobile application for online shopping.}
-        \resumeItem{Managed task queues for syncing 300,000 daily shipments' status with third-party logistics partners in Vietnam and Thailand.}
-        \resumeItem{Language/Technology: \textbf{Python}, \textbf{Django}, \textbf{Javascript}.}
-      \resumeItemListEnd
-
-    \resumeSubhead
-      {PayPal}{Jun. 2014 -- Nov. 2015}
-      {Software Engineer}
-      \resumeItemListStart
-        \resumeItem{Implemented partner onboarding flow -- allow users to create PayPal accounts on various partner applications.}
-        \resumeItem{Language/Technology: \textbf{Java}, \textbf{Node.js}.}
+        \resumeItem{Implemented features and user interface on WWW and mobile for group task management in Workplace.}
+        \resumeItem{Language/Technology: \textbf{Hack (PHP)}, \textbf{React (JavaScript)}, \textbf {HTML} \& \textbf{CSS}.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
 
 %-----------AWARDS----------
-\section{Achievements \& Awards}
+\section{Achievements and Awards}
   \resumeSubHeadingListStart
     \resumeSubheadTwo
-      {Ranked 15th in Facebook Hackercup}{2016}
+      {Vietnam Golden Globe Award}{2017}
       \resumeItemListStart
-        \resumeItem{Competed individually to solve algorithmic problems in 2‐-3 hours. The contest is
-          organized annually by Facebook with around \textbf{10,000} competitors. Ranked 15th in
-          World Final round.}
+        \resumeItem{An annual award granted by Ministry of Science and Technology for 10 best young talents in technology.}
       \resumeItemListEnd
     
     \resumeSubheadTwo
-      {Ranked 15th in ACM ICPC World Final}{2016}
+      {ACM/ICPC World Finals}{2016, 2017}
       \resumeItemListStart
-        \resumeItem{Competed in a team of three to solve 10‐-12 algorithmic problems in five hours
-          contest using C++ / Java.}
-        \resumeItem{Highest place amongst all Vietnamese teams participated in ACM ICPC.}
+        \resumeItem{Competed in a team of three to solve 10‐-13 algorithmic problems in 5 hours using C++ \& Java.} 
+        \resumeItem{About 50,000 students from 3,000 universities took part each year.}
+        \resumeItem{Ranked \textbf{34th} in 2017 \& \textbf{28th} in 2016.}
       \resumeItemListEnd
 
     \resumeSubheadTwo
-      {ACM ICPC Regional Champion}{2015}
+      {ACM/ICPC Regional Contests}{2015, 2016}
       \resumeItemListStart
-        \resumeItem{Champion of Jakarta ACM ICPC Regional 2015 and 3rd place in Singapore ACM ICPC Regional 2015.}
+        \resumeItem{\textbf{Champion} of 2015 ACM/ICPC Hanoi Regional \& second place in the 2016 ACM/ICPC Nha Trang Regional.}
       \resumeItemListEnd
 
     \resumeSubheadTwo
-      {Top 150 in Google Code Jam}{2013, 2014, 2015}
+      {Champion of National Informatics Olympiad for University students}{2016, 2017}
       \resumeItemListStart
-        \resumeItem{Competed individually to solve 4 algorithmic problems in 2.5 hours. The contest is
-        organized annually by Google with over 10,000 competitors. Placed 93rd in 2013, 126th in 2014
-        and 121st in 2015.}
+        \resumeItem{Competed individually to solve 4 algorithmic problems in 3 hours using C++ \& Java.}
       \resumeItemListEnd
 
     \resumeSubheadTwo
-      {Ranked 17th in ACM ICPC World Final}{2012}
+      {First prize in National Mathematics Olympiad for University students}{2016, 2017}
+      \resumeItemListStart
+        \resumeItem{Competed individually to solve problems about linear algebra in 3 hours.}
+      \resumeItemListEnd
+
+    \resumeSubheadTwo
+      {Gold medalist at International Olympiad in Informatics for High school students}{2015}
+      \resumeItemListStart
+        \resumeItem{Competed individually in 2 days to solve 3 algorithmic problems in 5 hours on each day.}
+      \resumeItemListEnd
+
   \resumeSubHeadingListEnd
 
 
@@ -158,19 +163,17 @@
 \section{Activities}
   \resumeSubHeadingListStart
     \resumeSubheadTwo
-      {Administrator, Contest Manager at \link{http://vnoi.info}{vnoi.info}}{Jun. 2010 -- Present}
+      {Member of Judging Committee for ACM/ICPC}{Oct. 2017 -- Dec. 2017}
       \resumeItemListStart
-        \resumeItem{Leading a team of 5--10 people in creating problemsets, managing contest platform and
-          raising funds for yearly programming competitions with over 250 participants.}
-        \resumeItem{Managing \link{https://www.facebook.com/groups/VNOIForum/}{VNOI Facebook group} for algorithmic discussions with 8,000 members.}
+        \resumeItem{Created algorithmic problems, implemented solutions and prepared testing datasets for ACM/ICPC national and regional contests hosted in Vietnam.}
       \resumeItemListEnd
 
     \resumeSubheadTwo
-      {Coach for National Olympiad team}{Jun. 2010 -- Aug. 2013}
+      {Teacher of Vietnamese IOI team}{Jun. 2016 -- Present}
       \resumeItemListStart
-        \resumeItem{Taught programming and algorithms to a group of 20 high school students preparing
-          for Vietnamese National Olympiads in Informatics.}
+        \resumeItem{Teaching advanced programming techniques and competing strategies for all Vietnamese contestants in International Olympiad in Informatics.}
       \resumeItemListEnd
+
   \resumeSubHeadingListEnd
 
 
@@ -178,8 +181,9 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubhead
-      {Nanyang Technological University}{Aug. 2010 -- May. 2014}
-      {Bachelor of Computer Science;  GPA: 4.84/5.0}
+      {University of Engineering and Technology - Vietnam National University}{Sep. 2015 -- Present}
+      {Student of Computer Science;  GPA: 3.82/4.00 (3rd year)}
+
   \resumeSubHeadingListEnd
 
 \end{document}
