--- a/PhamVanHanh.tex
+++ b/PhamVanHanh.tex
@@ -101,7 +101,7 @@
       {Software Engineer Intern}
       \resumeItemListStart
         \resumeItem{Implemented a source-to-source compiler to convert JavaScript code of new versions to older versions.}
-        \resumeItem{Language/Technology: \textbf{Abstract syntax tree}, \textbf{JavaScript} \&` \textbf{OCaml}.}
+        \resumeItem{Language/Technology: \textbf{Abstract syntax tree}, \textbf{JavaScript} \& \textbf{OCaml}.}
       \resumeItemListEnd
 
     \resumeSubhead
