Add graduation month

--- a/PhamVanHanh.tex
+++ b/PhamVanHanh.tex
@@ -181,7 +181,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubhead
-      {University of Engineering and Technology - Vietnam National University}{Sep. 2015 -- Present}
+      {University of Engineering and Technology - Vietnam National University}{Sep. 2015 -- Jan. 2020}
       {Student of Computer Science;  GPA: 3.82/4.00 (3rd year)}
 
   \resumeSubHeadingListEnd
