update cv after google internship

--- a/PhamVanHanh.tex
+++ b/PhamVanHanh.tex
@@ -86,8 +86,8 @@
 \section{Summary}
   \resumeSubHeadingListStart
     \resumeItemListStart
-      \resumeItem{Software Engineer Intern at Facebook in 2017 \& 2018}
-      \resumeItem{IOI 2015 gold medalist, ACM/ICPC World Finals 2016 \& 2017}
+      \resumeItem{Software Engineer Intern at Google in 2019, Facebook in 2017 \& 2018}
+      \resumeItem{IOI 2015 gold medalist, ICPC World Finals 2016, 2017 \& 2019}
       \resumeItem{Experience with C++, Java, JavaScript, PHP, OCaml, HTML, Hack \& React}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -96,6 +96,14 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
+    \resumeSubhead
+      {Google}{Jul. 2019 -- Oct. 2019}
+      {Software Engineer Intern}
+      \resumeItemListStart
+      	\resumeItem{Implemented data pipeline for sending notifications to channel creators in YouTube.}
+	\resumeItem{Language/Technology: \textbf{C++} \& \textbf{Database}.}
+      \resumeItemListEnd
+
     \resumeSubhead
       {Facebook}{Jun. 2018 -- Sep. 2018}
       {Software Engineer Intern}
@@ -119,23 +127,23 @@
 \section{Achievements and Awards}
   \resumeSubHeadingListStart
     \resumeSubheadTwo
-      {Vietnam Golden Globe Award}{2017}
+      {Vietnam Golden Globe Award}{2018}
       \resumeItemListStart
         \resumeItem{An annual award granted by Ministry of Science and Technology for 10 best young talents in technology.}
       \resumeItemListEnd
-    
+
     \resumeSubheadTwo
-      {ACM/ICPC World Finals}{2016, 2017}
+      {International Collegiate Programming Contest (ICPC) -- World Finals}{2016, 2017, 2019}
       \resumeItemListStart
-        \resumeItem{Competed in a team of three to solve 10‐-13 algorithmic problems in 5 hours using C++ \& Java.} 
+        \resumeItem{Competed in a team of three to solve 10‐-13 algorithmic problems in 5 hours using C++ \& Java.}
         \resumeItem{About 50,000 students from 3,000 universities took part each year.}
-        \resumeItem{Ranked \textbf{28th} in 2016 \& \textbf{34th} in 2017.}
+	\resumeItem{Ranked \textbf{28th} in 2016, \textbf{34th} in 2017 (as contestant) \& honorable mention in 2019 (as co-coach).}
       \resumeItemListEnd
 
     \resumeSubheadTwo
-      {ACM/ICPC Regional Contests}{2015, 2016}
+      {ICPC Regional Contests}{2015, 2016}
       \resumeItemListStart
-        \resumeItem{\textbf{Champion} of 2015 ACM/ICPC Hanoi Regional \& second place in the 2016 ACM/ICPC Nha Trang Regional.}
+        \resumeItem{\textbf{Champion} of 2015 ICPC Hanoi Regional \& second place in the 2016 ICPC Nha Trang Regional.}
       \resumeItemListEnd
 
     \resumeSubheadTwo
@@ -163,9 +171,9 @@
 \section{Activities}
   \resumeSubHeadingListStart
     \resumeSubheadTwo
-      {Member of Judging Committee for ACM/ICPC}{Oct. 2017 -- Dec. 2018}
+      {Member of Judging Committee for ICPC}{Oct. 2017 -- Present}
       \resumeItemListStart
-        \resumeItem{Created algorithmic problems, implemented solutions and prepared testing datasets for ACM/ICPC national and regional contests hosted in Vietnam.}
+        \resumeItem{Created algorithmic problems, implemented solutions and prepared testing datasets for ICPC national and regional contests hosted in Vietnam.}
       \resumeItemListEnd
 
     \resumeSubheadTwo
@@ -182,7 +190,7 @@
   \resumeSubHeadingListStart
     \resumeSubhead
       {University of Engineering and Technology - Vietnam National University}{Sep. 2015 -- Jan. 2020}
-      {Student of Computer Science;  GPA: 3.82/4.00 (3rd year)}
+      {Student of Computer Science;  GPA: 3.58/4.00 (4th year)}
 
   \resumeSubHeadingListEnd
 
