update graduation status

--- a/PhamVanHanh.tex
+++ b/PhamVanHanh.tex
@@ -189,8 +189,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubhead
-      {University of Engineering and Technology - Vietnam National University}{Sep. 2015 -- Jan. 2020}
-      {Student of Computer Science;  GPA: 3.58/4.00 (4th year)}
+      {University of Engineering and Technology - Vietnam National University}{Sep. 2015 -- Jul. 2020}
+      {Student of Computer Science;  GPA: 3.61/4.00; Grade: \textbf{High distinction}}
 
   \resumeSubHeadingListEnd
 
